<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".ui.RegistroActivity" >

    <ImageView
        android:id="@+id/imageView_logo_app"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_minitwitter_white"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/color_Primary_dark"
        android:textColorHint="@color/color_Primary_dark"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo_app"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo_app"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/color_Primary_dark"
        android:textColorHint="@color/color_Primary_dark"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_registrarse"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/gint_username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/color_Primary_dark"
        android:textColorHint="@color/color_Primary_dark"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo_app"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo_app"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_app" />

    <TextView
        android:id="@+id/textView_ir_iniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/txtView_ir_a_login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_registrarse"
        app:layout_constraintStart_toStartOf="@+id/button_registrarse"
        app:layout_constraintTop_toBottomOf="@+id/button_registrarse" />

</androidx.constraintlayout.widget.ConstraintLayout>